made the rolling text optional

--- a/src/index.html
+++ b/src/index.html
@@ -77,101 +77,111 @@
       <img src="assets/menu-btn.png" alt="" class="menu-btn" />
     </nav>
     <!-- navbar -->
-    
-   <!-- header -->
+
+    <!-- header -->
     <header id="home">
-       <div class="header-content">
-          <h2 id="quote">Zoom the World around!</h2>
-          <div class="line"></div>
-          <div class="main">
-             <h1> Collect Moments
+      <div class="header-content">
+        <h2 id="quote">Zoom the World around!</h2>
+        <div class="line"></div>
+        <!-- <div class="main">
+             <h1 style="font-size: 3rem;"> Collect Moments
               <div class="roller">
                <span id="rolltext">not things
-          </div>
-          <a href="#destGlobe" class="ctn">Let's go!</a>
-       </div>
+          </div> -->
+        <a href="#destGlobe" class="ctn">Let's go!</a>
+      </div>
     </header>
-  <!-- header -->
-  <!--Destinations-->
-  <article class="destGlobe" id="destGlobe">
-    <div id="chartdiv"></div>
-  </article>
-  <!--Destinations-->
+    <!-- header -->
+    <!--Destinations-->
+    <article class="destGlobe" id="destGlobe">
+      <div id="chartdiv"></div>
+    </article>
+    <!--Destinations-->
 
-  <!-- script -->
-   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<script type="module" src="js/app.js"></script>
-<script src="https://cdn.amcharts.com/lib/5/index.js"></script>
-<script src="https://cdn.amcharts.com/lib/5/map.js"></script>
-<script src="https://cdn.amcharts.com/lib/5/geodata/worldLow.js"></script>
-<script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
+    <!-- script -->
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-3.6.0.js"
+    ></script>
+    <script type="module" src="js/app.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/map.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/geodata/worldLow.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
 
-<script>
-am5.ready(function() {
-//root element
-var root = am5.Root.new("chartdiv");
+    <script>
+      am5.ready(function () {
+        //root element
+        var root = am5.Root.new("chartdiv");
 
-// Set themes
-root.setThemes([
-  am5themes_Animated.new(root)
-]);
+        // Set themes
+        root.setThemes([am5themes_Animated.new(root)]);
 
-// map chart
-var chart = root.container.children.push(am5map.MapChart.new(root, {
-  panX: "rotateX",
-  panY: "rotateY",
-  projection: am5map.geoOrthographic(),
-  paddingBottom: 20,
-  paddingTop: 20,
-  paddingLeft: 20,
-  paddingRight: 20
-}));
+        // map chart
+        var chart = root.container.children.push(
+          am5map.MapChart.new(root, {
+            panX: "rotateX",
+            panY: "rotateY",
+            projection: am5map.geoOrthographic(),
+            paddingBottom: 20,
+            paddingTop: 20,
+            paddingLeft: 20,
+            paddingRight: 20,
+          })
+        );
 
-// main polygon series for countries
-var polygonSeries = chart.series.push(am5map.MapPolygonSeries.new(root, {
-  geoJSON: am5geodata_worldLow
-}));
+        // main polygon series for countries
+        var polygonSeries = chart.series.push(
+          am5map.MapPolygonSeries.new(root, {
+            geoJSON: am5geodata_worldLow,
+          })
+        );
 
-polygonSeries.mapPolygons.template.setAll({
-  tooltipText: "{name}",
-  toggleKey: "active",
-  interactive: true
-});
+        polygonSeries.mapPolygons.template.setAll({
+          tooltipText: "{name}",
+          toggleKey: "active",
+          interactive: true,
+        });
 
-polygonSeries.mapPolygons.template.states.create("hover", {
-  fill: root.interfaceColors.get("primaryButtonHover")
-});
+        polygonSeries.mapPolygons.template.states.create("hover", {
+          fill: root.interfaceColors.get("primaryButtonHover"),
+        });
 
-// series for background fill
-var backgroundSeries = chart.series.push(am5map.MapPolygonSeries.new(root, {}));
-backgroundSeries.mapPolygons.template.setAll({
-  fill: root.interfaceColors.get("alternativeBackground"),
-  fillOpacity: 0.1,
-  strokeOpacity: 0
-});
-backgroundSeries.data.push({
-  geometry: am5map.getGeoRectangle(90, 180, -90, -180)
-});
+        // series for background fill
+        var backgroundSeries = chart.series.push(
+          am5map.MapPolygonSeries.new(root, {})
+        );
+        backgroundSeries.mapPolygons.template.setAll({
+          fill: root.interfaceColors.get("alternativeBackground"),
+          fillOpacity: 0.1,
+          strokeOpacity: 0,
+        });
+        backgroundSeries.data.push({
+          geometry: am5map.getGeoRectangle(90, 180, -90, -180),
+        });
 
-// graticule series
-var graticuleSeries = chart.series.push(am5map.GraticuleSeries.new(root, {}));
-graticuleSeries.mapLines.template.setAll({ strokeOpacity: 0.1, stroke: root.interfaceColors.get("alternativeBackground") })
+        // graticule series
+        var graticuleSeries = chart.series.push(
+          am5map.GraticuleSeries.new(root, {})
+        );
+        graticuleSeries.mapLines.template.setAll({
+          strokeOpacity: 0.1,
+          stroke: root.interfaceColors.get("alternativeBackground"),
+        });
 
-// Rotate animation
-chart.animate({
-  key: "rotationX",
-  from: 0,
-  to: 360,
-  duration: 30000,
-  loops: Infinity
-});
+        // Rotate animation
+        chart.animate({
+          key: "rotationX",
+          from: 0,
+          to: 360,
+          duration: 30000,
+          loops: Infinity,
+        });
 
-// Make stuff animate on load
-chart.appear(1000, 100);
-
-});
-</script>
-<!-- script -->
-
+        // Make stuff animate on load
+        chart.appear(1000, 100);
+      });
+    </script>
+    <!-- script -->
   </body>
 </html>
