--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,11 @@
       rel="stylesheet"
     />
     <!-- links -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+    />
+
     <link rel="icon" href="assets/logo.jpg" type="image/jpg" />
     <link rel="shortcut icon" href="assets/logo.png" />
     <link
@@ -40,7 +45,6 @@
       sizes="180x180"
       href="assets/apple-touch-icon.png"
     />
-    <link rel="manifest" href="../site.webmanifest" />
   </head>
   <body>
     <!-- navbar -->
@@ -92,11 +96,58 @@
       </div>
     </header>
     <!-- header -->
+
     <!--Destinations-->
     <article class="destGlobe" id="destGlobe">
       <div id="chartdiv"></div>
     </article>
     <!--Destinations-->
+
+    <!--footer-->
+    <section class="footer">
+      <span>LGT Holidays | LGT Connextions Pvt. Ltd</span>
+      <br />
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>company</h4>
+            <ul>
+              <li><a href="#">about us</a></li>
+              <li><a href="#">our services</a></li>
+              <li><a href="#">privacy policy</a></li>
+              <li><a href="#">affiliate program</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <span
+        >Created By MatthewsZen, MahiReddy3001, Abdusamadshaik | 2022 All rights
+        reserved.</span
+      >
+      <div class="social">
+        <li>
+          <a
+            href="https://github.com/MatthewsZen"
+            target="_blank"
+            rel="noreferrer"
+            ><i class="fa fa-github"></i
+          ></a>
+          <a
+            href="https://github.com/MahiReddy3001"
+            target="_blank"
+            rel="noreferrer"
+            ><i class="fa fa-github"></i
+          ></a>
+          <a
+            href="https://github.com/Abdusamadshaik"
+            target="_blank"
+            rel="noreferrer"
+            ><i class="fa fa-github"></i
+          ></a>
+        </li>
+      </div>
+    </section>
+    <!--footer-->
 
     <!-- script -->
     <script
@@ -104,7 +155,7 @@
       src="https://code.jquery.com/jquery-3.6.0.js"
     ></script>
     <script type="module" src="js/app.js"></script>
-    <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+    <script src="js/globe.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/map.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/geodata/worldLow.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
