3d globe ki continents

--- a/src/index.html
+++ b/src/index.html
@@ -98,54 +98,44 @@
     <!-- header -->
 
     <!--Destinations-->
-    <article class="destGlobe" id="destGlobe">
-      <div id="chartdiv"></div>
-    </article>
+    <div class="con">
+      <article class="destGlobe" id="destGlobe">
+        <div class="card">
+          <div class="imgBox">
+            <img
+              src="https://images.unsplash.com/photo-1473167052083-3d31fa1f6776?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU4ODl8&ixlib=rb-4.0.3&q=85"
+              alt="New York Photo"
+            />
+            <div class="img-blur">
+              <a href="#">Explore ></a>
+            </div>
+          </div>
+          <h2 class="title">
+            <a>New York</a>
+          </h2>
+        </div>
+        <div class="card">
+          <div class="imgBox">
+            <img
+              src="https://images.unsplash.com/photo-1604604994333-f1b0e9471186?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU5NzR8&ixlib=rb-4.0.3&q=85"
+              alt="New York Photo"
+            />
+            <div class="img-blur">
+              <a href="#">Explore ></a>
+            </div>
+          </div>
+          <h2 class="title">
+            <a>Tokyo</a>
+          </h2>
+        </div>
+        <div id="chartdiv"></div>
+      </article>
+    </div>
     <!--Destinations-->
 
     <!--footer-->
     <section class="footer">
-      <span>LGT Holidays | LGT Connextions Pvt. Ltd</span>
-      <br />
-      <div class="container">
-        <div class="row">
-          <div class="footer-col">
-            <h4>company</h4>
-            <ul>
-              <li><a href="#">about us</a></li>
-              <li><a href="#">our services</a></li>
-              <li><a href="#">privacy policy</a></li>
-              <li><a href="#">affiliate program</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <span
-        >Created By MatthewsZen, MahiReddy3001, Abdusamadshaik | 2022 All rights
-        reserved.</span
-      >
-      <div class="social">
-        <li>
-          <a
-            href="https://github.com/MatthewsZen"
-            target="_blank"
-            rel="noreferrer"
-            ><i class="fa fa-github"></i
-          ></a>
-          <a
-            href="https://github.com/MahiReddy3001"
-            target="_blank"
-            rel="noreferrer"
-            ><i class="fa fa-github"></i
-          ></a>
-          <a
-            href="https://github.com/Abdusamadshaik"
-            target="_blank"
-            rel="noreferrer"
-            ><i class="fa fa-github"></i
-          ></a>
-        </li>
-      </div>
+      <h1>LGT Holidays | LGT Connextions Pvt. Ltd</h1>
     </section>
     <!--footer-->
 
