--- a/src/index.html
+++ b/src/index.html
@@ -134,9 +134,7 @@
     <!--Destinations-->
 
     <!--footer-->
-    <section class="footer">
-      <h1>LGT Holidays | LGT Connextions Pvt. Ltd</h1>
-    </section>
+    <section class="footer"></section>
     <!--footer-->
 
     <!-- script -->
