--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8" />
     <title>LGT Holidays | Redesigning Travel Trends</title>
 
-    <!-- css -->
+    <!-- links -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
     <link
@@ -32,10 +32,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-    <!-- links -->
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
     <link rel="icon" href="assets/logo.jpg" type="image/jpg" />
