--- a/src/ab.html
+++ b/src/ab.html
@@ -16,6 +16,20 @@
       <div class="container">
         <div class="row">
           <div class="footer-col">
+            <h4>About</h4>
+            <div class="footer-col-content">
+              <a>
+                Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative
+                to help the upcoming programmers with the code. Scanfcode
+                focuses on providing the most efficient code or snippets as the
+                code wants to be simple. We will help programmers build up
+                concepts in different programming languages that include C, C++,
+                Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and
+                Algorithm.</a
+              >
+            </div>
+          </div>
+          <div class="footer-col">
             <h4>company</h4>
             <ul>
               <li><a href="#">about us</a></li>
