--- a/src/index.html
+++ b/src/index.html
@@ -97,33 +97,137 @@
     <!--Destinations-->
     <div class="con">
       <article class="destGlobe" id="destGlobe">
-        <div class="card">
-          <div class="imgBox">
-            <img
-              src="https://images.unsplash.com/photo-1473167052083-3d31fa1f6776?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU4ODl8&ixlib=rb-4.0.3&q=85"
-              alt="New York Photo"
-            />
-            <div class="img-blur">
-              <a href="#">Explore ></a>
+        <div class="backgroundGlobe flexround">
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://images.unsplash.com/photo-1473167052083-3d31fa1f6776?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU4ODl8&ixlib=rb-4.0.3&q=85"
+                alt="New York Photo"
+              />
+              <div class="img-blur">
+                <a href="#">Explore ></a>
+              </div>
             </div>
+            <h2 class="title">
+              <a>New York</a>
+            </h2>
           </div>
-          <h2 class="title">
-            <a>New York</a>
-          </h2>
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://images.unsplash.com/photo-1473167052083-3d31fa1f6776?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU4ODl8&ixlib=rb-4.0.3&q=85"
+                alt="New York Photo"
+              />
+              <div class="img-blur">
+                <a href="#">Explore ></a>
+              </div>
+            </div>
+            <h2 class="title">
+              <a>New York</a>
+            </h2>
+          </div>
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://images.unsplash.com/photo-1604604994333-f1b0e9471186?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU5NzR8&ixlib=rb-4.0.3&q=85"
+                alt="New York Photo"
+              />
+              <div class="img-blur">
+                <a href="#">Explore ></a>
+              </div>
+            </div>
+            <h2 class="title">
+              <a>Tokyo</a>
+            </h2>
+          </div>
         </div>
-        <div class="card">
-          <div class="imgBox">
-            <img
-              src="https://images.unsplash.com/photo-1604604994333-f1b0e9471186?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU5NzR8&ixlib=rb-4.0.3&q=85"
-              alt="New York Photo"
-            />
-            <div class="img-blur">
-              <a href="#">Explore ></a>
+        <div class="backgroundGlobe flexround">
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://images.unsplash.com/photo-1473167052083-3d31fa1f6776?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU4ODl8&ixlib=rb-4.0.3&q=85"
+                alt="New York Photo"
+              />
+              <div class="img-blur">
+                <a href="#">Explore ></a>
+              </div>
             </div>
+            <h2 class="title">
+              <a>New York</a>
+            </h2>
           </div>
-          <h2 class="title">
-            <a>Tokyo</a>
-          </h2>
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://images.unsplash.com/photo-1473167052083-3d31fa1f6776?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU4ODl8&ixlib=rb-4.0.3&q=85"
+                alt="New York Photo"
+              />
+              <div class="img-blur">
+                <a href="#">Explore ></a>
+              </div>
+            </div>
+            <h2 class="title">
+              <a>New York</a>
+            </h2>
+          </div>
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://images.unsplash.com/photo-1604604994333-f1b0e9471186?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU5NzR8&ixlib=rb-4.0.3&q=85"
+                alt="New York Photo"
+              />
+              <div class="img-blur">
+                <a href="#">Explore ></a>
+              </div>
+            </div>
+            <h2 class="title">
+              <a>Tokyo</a>
+            </h2>
+          </div>
+        </div>
+        <div class="backgroundGlobe flexround">
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://images.unsplash.com/photo-1604604994333-f1b0e9471186?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU5NzR8&ixlib=rb-4.0.3&q=85"
+                alt="New York Photo"
+              />
+              <div class="img-blur">
+                <a href="#">Explore ></a>
+              </div>
+            </div>
+            <h2 class="title">
+              <a>Tokyo</a>
+            </h2>
+          </div>
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://images.unsplash.com/photo-1604604994333-f1b0e9471186?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU5NzR8&ixlib=rb-4.0.3&q=85"
+                alt="New York Photo"
+              />
+              <div class="img-blur">
+                <a href="#">Explore ></a>
+              </div>
+            </div>
+            <h2 class="title">
+              <a>Tokyo</a>
+            </h2>
+          </div>
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://images.unsplash.com/photo-1604604994333-f1b0e9471186?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODQwNzU5NzR8&ixlib=rb-4.0.3&q=85"
+                alt="New York Photo"
+              />
+              <div class="img-blur">
+                <a href="#">Explore ></a>
+              </div>
+            </div>
+            <h2 class="title">
+              <a>Tokyo</a>
+            </h2>
+          </div>
         </div>
         <div id="chartdiv"></div>
       </article>
@@ -131,7 +235,57 @@
     <!--Destinations-->
 
     <!--footer-->
-    <section class="footer"></section>
+    <footer class="footer">
+      <footer class="footer-distributed">
+        <div class="footer-left">
+          <h3>Lgt Holidays</h3>
+          <br />
+
+          <p class="footer-company-about">
+            Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce
+            euismod convallis velit, eu auctor lacus vehicula sit amet.
+          </p>
+          <br />
+
+          <p class="footer-company-name">Company Name © 2015</p>
+        </div>
+
+        <div class="footer-center">
+          <div>
+            <i class="fa fa-map-marker"></i>
+            <p><span>444 S. Cedros Ave</span> Solana Beach, California</p>
+          </div>
+
+          <div>
+            <i class="fa fa-phone"></i>
+            <p>+1.555.555.5555</p>
+          </div>
+
+          <div>
+            <i class="fa fa-envelope"></i>
+            <p><a href="mailto:support@company.com">support@company.com</a></p>
+          </div>
+        </div>
+
+        <div class="footer-right">
+          <p class="footer-links">
+            <a href="#" class="link-1">Home</a>
+
+            <a href="#">Spectacles</a>
+
+            <a href="#">About</a>
+
+            <a href="#">Contact</a>
+          </p>
+          <div class="footer-icons">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-github"></i></a>
+          </div>
+        </div>
+      </footer>
+    </footer>
     <!--footer-->
 
     <!-- script -->
