--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
     <!--Destinations-->
     <div class="con">
       <article class="destGlobe" id="destGlobe">
-        <div class="backgroundGlobe flexround">
+        <div class="flexround">
           <div class="card">
             <div class="imgBox">
               <img
@@ -109,7 +109,7 @@
               </div>
             </div>
             <h2 class="title">
-              <a>New York</a>
+              <a>ALL LOCATIONS</a>
             </h2>
           </div>
           <div class="card">
@@ -123,7 +123,7 @@
               </div>
             </div>
             <h2 class="title">
-              <a>New York</a>
+              <a>AFRICA</a>
             </h2>
           </div>
           <div class="card">
@@ -137,11 +137,11 @@
               </div>
             </div>
             <h2 class="title">
-              <a>Tokyo</a>
+              <a>EUROPE</a>
             </h2>
           </div>
         </div>
-        <div class="backgroundGlobe flexround">
+        <div class="flexround">
           <div class="card">
             <div class="imgBox">
               <img
@@ -153,7 +153,7 @@
               </div>
             </div>
             <h2 class="title">
-              <a>New York</a>
+              <a>AUSTRALIA</a>
             </h2>
           </div>
           <div class="card">
@@ -167,7 +167,7 @@
               </div>
             </div>
             <h2 class="title">
-              <a>New York</a>
+              <a>AMERICAS</a>
             </h2>
           </div>
           <div class="card">
@@ -181,11 +181,11 @@
               </div>
             </div>
             <h2 class="title">
-              <a>Tokyo</a>
+              <a>MIDDLE EAST</a>
             </h2>
           </div>
         </div>
-        <div class="backgroundGlobe flexround">
+        <div class="flexround">
           <div class="card">
             <div class="imgBox">
               <img
@@ -197,7 +197,7 @@
               </div>
             </div>
             <h2 class="title">
-              <a>Tokyo</a>
+              <a>INDIAN OCEAN</a>
             </h2>
           </div>
           <div class="card">
@@ -211,7 +211,7 @@
               </div>
             </div>
             <h2 class="title">
-              <a>Tokyo</a>
+              <a>INDIA</a>
             </h2>
           </div>
           <div class="card">
@@ -225,7 +225,7 @@
               </div>
             </div>
             <h2 class="title">
-              <a>Tokyo</a>
+              <a>ASIA</a>
             </h2>
           </div>
         </div>
