--- a/src/bali.html
+++ b/src/bali.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>carousal</title>
+    <title>Bali | Lgt holidays</title>
     <link rel="stylesheet" href="css/destinations.css"/>
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/style.css">
     <link
-    href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-    rel="stylesheet"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -188,7 +189,7 @@
         <div class="d-flex flex-row justify-content-end">
           <button class="pad">Tour Pricing starts from  &#8377 12800</button>
         </div>
-        <div class="flex justify-between mt-10 mar">
+        <div class="flex justify-between mar">
           <a
             href="#"
             class="inline-block capitalize font-semibold text-lg border-2 border-black rounded-full py-2 px-4 hover:bg-blue-500 hover:text-white hover:border-blue-500"
@@ -197,6 +198,59 @@
         </div>
       </div>
     </section>
+    <!--footer-->
+<footer class="footer">
+  <footer class="footer-distributed">
+    <div class="footer-left">
+      <h3>Lgt Holidays</h3>
+      <br />
+
+      <p class="footer-company-about">
+        Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod
+        convallis velit, eu auctor lacus vehicula sit amet.
+      </p>
+      <br />
+
+      <p class="footer-company-name">Company Name © 2015</p>
+    </div>
+
+    <div class="footer-center">
+      <div>
+        <i class="fa fa-map-marker"></i>
+        <p><span>444 S. Cedros Ave</span> Solana Beach, California</p>
+      </div>
+
+      <div>
+        <i class="fa fa-phone"></i>
+        <p>+1.555.555.5555</p>
+      </div>
+
+      <div>
+        <i class="fa fa-envelope"></i>
+        <p><a href="mailto:support@company.com">support@company.com</a></p>
+      </div>
+    </div>
+    <div class="footer-right">
+      <p class="footer-links">
+        <a href="#" class="link-1">Home</a>
+
+        <a href="#">Spectacles</a>
+
+        <a href="#">About</a>
+
+        <a href="#">Contact</a>
+      </p>
+      <div class="footer-icons">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+      </div>
+    </div>
+  </footer>
+</footer>
+<!--footer-->
+
     <script>
       function myFunction(imgs) {
         var expandImg = document.getElementById("expandedImg");
