--- a/src/dubai.html
+++ b/src/dubai.html
@@ -12,6 +12,10 @@
     rel="stylesheet"
     />
     <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
@@ -196,7 +200,7 @@
         <div class="d-flex flex-row justify-content-end">
           <button class="pad">Tour Pricing starts from  &#8377 12800</button>
         </div>
-        <div class="flex justify-between mt-10 mar">
+        <div class="flex justify-between mar">
           <a
             href="#"
             class="inline-block capitalize font-semibold text-lg border-2 border-black rounded-full py-2 px-4 hover:bg-blue-500 hover:text-white hover:border-blue-500"
